Permitir a possibilidade de remover um scheduleItem #2

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap" rel="stylesheet">
 
+    <!--
+   Delete icon made by <a href="https://www.flaticon.com/authors/kiranshastry" title="Kiranshastry">Kiranshastry</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+    -->
+ 
     <title>Proffy</title>
   </head>
   <body>
